--- a/03/tab.html
+++ b/03/tab.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 
     <style>
-         * {
+        * {
             margin: 0;
             padding: 0;
         }
@@ -21,8 +21,11 @@
             font-size: 12px;
             color: #515767;
             margin: 0 12px;
-            line-height: 60px; /** 当块级元素的行高和高度相同时，内容就自动垂直居中**/
-            text-align: center;/** 块级元素内容水平居中**/
+            line-height: 60px;
+            /** 当块级元素的行高和高度相同时，内容就自动垂直居中**/
+            text-align: center;
+            /** 块级元素内容水平居中**/
+            background-color: #007fff;
         }
 
         .tab-ele:hover {
@@ -30,18 +33,50 @@
             color: #2e313a;
             cursor: pointer;
         }
+
+        .tab-site {
+            position: absolute;
+            bottom: 12px;
+            background-color: aqua;
+            z-index: 99;
+        }
+
+        .up-most {
+            position: relative;
+            /* z-index: 999; */
+        }
+
+        .tab-video {
+            position: sticky;
+            top: 0;
+        }
+
+        .blank {
+            position: relative;
+            height: 200px;
+            background-color: #2e313a;
+            /* bottom: 30px;
+            z-index: 999; */
+        }
+
+        .blank-white {
+            height: 20000px;
+        }
     </style>
 </head>
 
 <body>
-    <div>
+    <div style="position: relative;">
         <span class="tab-ele">首页</span>
-        <span class="tab-ele">沸点</span>
-        <span class="tab-ele">课程</span>
-        <span class="tab-ele">直播</span>
+        <span class="tab-ele tab-site">沸点</span>
+        <span class="tab-ele up-most">课程</span>
+        <span class="tab-ele tab-video">直播</span>
         <span class="tab-ele">活动</span>
         <span class="tab-ele">商场</span>
     </div>
+
+    <div class="blank"></div>
+    <div class="blank-white"></div>
 </body>
 
 </html>
